remove python scraping api add go scraping api remove spring batch schedule and transform configurable scraping
