# src/main/java/com/ayagmar/jobapplicationtracker/jobposting/rest/JobScraperController.java
@@ -1,9 +1,11 @@
 package com.ayagmar.jobapplicationtracker.jobposting.rest;
 
+import com.ayagmar.go.jobscraper.model.ApiSuccessResponse;
+import com.ayagmar.go.jobscraper.model.ScraperJobPosting;
 import com.ayagmar.jobapplicationtracker.jobposting.service.JobScraperService;
-import com.ayagmar.jobscraper.model.JobListingResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
@@ -17,8 +19,8 @@ import java.util.List;
 public class JobScraperController {
     private final JobScraperService jobScraperService;
 
-    @GetMapping("/scrape")
-    public List<JobListingResponse> scrapeJobs(
+    @PostMapping("/scrape")
+    public ApiSuccessResponse scrapeJobs(
             @RequestParam String jobTitle,
             @RequestParam(required = false, defaultValue = "ch") String country,
             @RequestParam(required = false, defaultValue = "1") Integer pages,
@@ -27,7 +29,7 @@ public class JobScraperController {
     }
 
     @GetMapping("/jobs")
-    public List<JobListingResponse> getJobs() {
+    public List<ScraperJobPosting> getJobs() {
         return jobScraperService.getJobs();
     }
 
